WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281799
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox_justifycontent-rtl-001.html
https://bugs.webkit.org/show_bug.cgi?id=281799
Summary
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox_justifycont...
alan
Reported
2024-10-18 19:24:21 PDT
ssia
Attachments
Patch
(5.83 KB, patch)
2024-10-18 19:26 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(6.41 KB, patch)
2024-10-20 16:08 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-10-18 19:26:46 PDT
Created
attachment 472992
[details]
Patch
alan
Comment 2
2024-10-20 16:08:10 PDT
Created
attachment 473000
[details]
[fast-cq]Patch
EWS
Comment 3
2024-10-20 18:05:09 PDT
Committed
285493@main
(3b5faa1033db): <
https://commits.webkit.org/285493@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 473000
[details]
.
Radar WebKit Bug Importer
Comment 4
2024-10-20 18:06:16 PDT
<
rdar://problem/138289524
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug