[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox_justifycontent-rtl-001.html https://bugs.webkit.org/show_bug.cgi?id=281799

Reviewed by Antti Koivisto.

Take inline direction into account when justify content value is left/right.

* Source/WebCore/layout/formattingContexts/flex/FlexFormattingUtils.cpp:
(WebCore::Layout::FlexFormattingUtils::inInlineDirectionRTL):
* Source/WebCore/layout/formattingContexts/flex/FlexFormattingUtils.h:
* Source/WebCore/layout/formattingContexts/flex/FlexLayout.cpp:
(WebCore::Layout::FlexLayout::handleMainAxisAlignment const):

Canonical link: https://commits.webkit.org/285493@main